fix_scrollbar

--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@ body {
 
 .App img {
   width: 200px;
-  margin-bottom: 60px;
+  /* margin-bottom: 60px; */
 }
 
 .Title {
@@ -19,19 +19,22 @@ body {
 
 .FilmsList {
   display: flex;
-  overflow: scroll;
+  overflow-x: scroll;
   margin-bottom: 40px;
 }
 
-/* Hide scrollbar for Chrome, Safari and Opera */
 .FilmsList::-webkit-scrollbar {
-  display: none;
+  height: 20px; /* width of the entire scrollbar */
 }
 
-/* Hide scrollbar for IE, Edge add Firefox */
-.FilmsList {
-  -ms-overflow-style: none;
-  scrollbar-width: none; /* Firefox */
+.FilmsList::-webkit-scrollbar-track {
+  background: black; /* color of the tracking area */
+}
+
+.FilmsList::-webkit-scrollbar-thumb {
+  background-color: #666666; /* color of the scroll thumb */
+  /*border-radius: 20px;  roundness of the scroll thumb */
+  /*border: 3px solid #333333;  creates padding around scroll thumb */
 }
 
 .Film img {
